[gd_scene load_steps=2 format=3 uid="uid://b8jdvubbp15ej"]

[ext_resource type="Script" uid="uid://buwuqyh8yybd6" path="res://ui/hud/debug/debug.gd" id="1_ujoej"]

[node name="Debug" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ujoej")

[node name="OpenDebugButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 13.0
offset_top = 855.0
offset_right = 71.0
offset_bottom = 886.0
grow_vertical = 2
toggle_mode = true
text = "Debug"

[node name="Content" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0

[node name="DebugText" type="RichTextLabel" parent="Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1137.0
offset_top = 28.0
offset_right = 1561.0
offset_bottom = 879.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons" type="VBoxContainer" parent="Content"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 74.0
offset_top = 563.0
offset_right = 242.0
offset_bottom = 863.0
grow_vertical = 2
alignment = 2

[node name="XpCurveButton" type="Button" parent="Content/Buttons"]
layout_mode = 2
toggle_mode = true
text = "Show XP curve"

[node name="XpMonitor" type="Button" parent="Content/Buttons"]
layout_mode = 2
toggle_mode = true
text = "XP monitor"

[connection signal="toggled" from="OpenDebugButton" to="." method="_on_open_button_toggled"]
[connection signal="toggled" from="Content/Buttons/XpCurveButton" to="." method="_on_xp_curve_button_toggled"]
[connection signal="toggled" from="Content/Buttons/XpMonitor" to="." method="_on_xp_monitor_toggled"]
